fix: repair overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+html {
+    overflow: hidden;
+    height: 100%;
+}
 body {
+    overflow: auto;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: #FFFFFF;
@@ -382,13 +388,11 @@ nav ul li a:hover {
 }
 .ccdoc-idfa-catalog-image {
     display: none;
-    width: 0;
+    width: 90%;
     height: auto;
-    opacity: 0;
-    transition: opacity 10s ease;
 }
 .ccdoc-idfa-catalog-image img{
-    max-width: 100%;
+    width: 100%;
 }
 .ccdoc-idfa-catalog-image.visible {
     display: block;
